# request_api_project

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml  test_something.py
src/data/usecases/: starships_list_colector.py  starships_list_colector_test.py
src/domain/usecases/: starships_list_colector.py
src/errors/: http_request_error.py
src/infra/: swapi_api_consumer.py  swapi_api_consumer_test.py
