[tool.poetry]
name = "request-api"
version = "0.1.0"
description = ""
authors = ["Francisco Cezar <franciscocezar.jr@outlook.com>"]
readme = "README.md"
packages = [{include = "request_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.2"
pre-commit = "^3.2.2"
pytest = "^7.3.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
